--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.10",
     "node-sass": "^4.9.3",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "sass-loader": "^7.1.0",
