Added module to allow images to be imported and used in components.
Reconfigured project structure for components.

Added clean script.

Added image loader hash.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "start-hot": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
