Updated yarn scripts, included linting and cleaning
Dependencies that are only needed for development have been moved to devDependencies.

Added classNames package.

Updated linting configs and errors.

Added colors, extends, core, and global styles.

Moved images folder outside of source so when built for production it is dist/images instead of dist/src/images

Added .ico file format to image loader.

--- a/.sasslintrc
+++ b/.sasslintrc
@@ -36,9 +36,7 @@ rules:
     - 1
     - allow-leading-underscore: true
       convention: hyphenatedlowercase
-  hex-length:
-    - 1
-    - style: short
+  hex-length: 0
   hex-notation:
     - 1
     - style: lowercase
@@ -59,7 +57,7 @@ rules:
   nesting-depth:
     - 1
     - max-depth: 3
-  no-color-keywords: 1
+  no-color-keywords: 0
   no-color-literals: 1
   no-css-comments: 1
   no-debug: 1
