--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,10 @@
     "react"
   ],
   "rules": {
-    "max-len": [1, 120, 2, { "ignoreComments": true}]
+    "react/jsx-filename-extension": 0
   },
   "extends": [
-    "airbnb-base",
+    "airbnb",
     "eslint:recommended",
     "plugin:react/recommended"
   ]
