--- a/package.json
+++ b/package.json
@@ -7,21 +7,18 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "start-hot": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
-    "clean": "rimraf dist"
+    "build": "yarn lint && yarn clean && webpack --mode production",
+    "clean": "rimraf dist",
+    "lint": "eslint src && sass-lint -c .sasslintrc -v -q"
   },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.4",
-    "@fortawesome/free-brands-svg-icons": "^5.3.1",
-    "@fortawesome/free-regular-svg-icons": "^5.3.1",
-    "@fortawesome/free-solid-svg-icons": "^5.3.1",
-    "@fortawesome/react-fontawesome": "^0.1.2",
+  "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
     "babel-loader": "7",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -35,17 +32,24 @@
     "include-media": "^1.4.9",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "reactstrap": "^6.4.0",
     "sass-lint": "^1.12.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
-    "webpack": "^4.17.1",
+    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-dev-server": "3.1.8"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-brands-svg-icons": "^5.3.1",
+    "@fortawesome/free-regular-svg-icons": "^5.3.1",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "reactstrap": "^6.4.0"
   }
 }
