--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "react"
   ],
   "rules": {
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "react/forbid-prop-types": 0
   },
   "extends": [
     "airbnb",
