--- a/.sasslintrc
+++ b/.sasslintrc
@@ -14,9 +14,7 @@ rules:
   brace-style:
     - 1
     - allow-single-line: true
-  class-name-format:
-    - 1
-    - convention: hyphenatedlowercase
+  class-name-format: 0
   clean-import-paths:
     - 1
     - filename-extension: false
