--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "classnames": "^2.2.6",
+    "local-storage": "^1.4.2",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
